[package]
name = "smsb"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.6.2", features = ["retry", "tracing", "limit", "catch-panic"] }
apalis-cron = "0.6.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tweety-rs = "0.1.4"
anyhow = "1.0.95"
tracing-subscriber = "0.3.19"
tower = { version = "0.5", features = ["load-shed"] }
tracing = "0.1.41"
dotenv = "0.15.0"
