[package]
name = "smsb"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.6.2", features = ["retry", "tracing", "catch-panic"] }
apalis-cron = "0.6.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tweety-rs = "0.1.4"
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "json"] }
tower = { version = "0.5", features = ["load-shed"] }
tracing = { version = "0.1.41", default-features = false }
dotenv = "0.15.0"
adaptive_backoff = "0.2.1"
atrium-api = "0.24.9"
atrium-xrpc-client = "0.5.10"
bsky-sdk = "0.1.14"
